--- a/hacklytics/src/components/Category.css
+++ b/hacklytics/src/components/Category.css
@@ -1,23 +1,23 @@
-.nav-bar {
-    background-color: black;
-    margin-top: -22px;
-    padding-right: 50px;
-    width: 300px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-.title {
-    color:rgb(121, 108, 108);
-    padding-left: 10px;
-}
-
-.selected {
-    background-color: rgb(67, 61, 61)
-}
-.stationName {
-    color: white;
-    border-bottom: 1px white solid;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    padding-left: 30px; 
-    margin-top: -16px;
-}
+.category-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Center items vertically */
+    text-align: center;
+  }
+  
+  .category-image {
+    width: 35px; /* Adjust width as needed */
+    height: auto; /* Maintain aspect ratio */
+    margin-bottom: 10px; /* Add space between image and text */
+  }
+  
+  .category-name {
+    text-align: center;
+    font-family: Inter; /* Set font to Inter */
+    font-size: 14pt; /* Set font size to 18pt */
+    font-weight: normal; /* Set font weight to regular */
+    color: #343541; /* Set font color to #343541 */
+  }
