--- a/hacklytics/src/pages/CategoryList.css
+++ b/hacklytics/src/pages/CategoryList.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
 .category-container {
     display: flex;
     /* align-items: ; */
@@ -5,4 +8,12 @@
     justify-content: center;
     /* width: 100vw;
     height: 200vh; */
+    margin-top: 70px;
+    margin-bottom: 90px;
+}
+
+.header{
+    margin-top:90px;
+    font: Inter;
+    font-weight: 700;
 }
