--- a/hacklytics/src/pages/CategoryList.css
+++ b/hacklytics/src/pages/CategoryList.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 
-.category-container {
+.container {
     display: flex;
     /* align-items: ; */
     flex-direction: row;
@@ -16,4 +16,38 @@
     margin-top:90px;
     font: Inter;
     font-weight: 700;
+}
+
+.button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 90px;
+    margin-right: 90px;
+    padding: 10px;
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+}
+  
+.button:hover {
+    background-color: #f0f0f0; /* Change background color on hover */
+    border-radius: 5px
+}
+
+.image {
+    width: 35px; /* Adjust width as needed */
+    height: 50px; /* Maintain aspect ratio */
+    margin-bottom: 2px; /* Add space between image and text */
+    display: block;
+}
+
+.name {
+    text-align: center;
+    font-family: Inter; /* Set font to Inter */
+    font-size: 14pt; /* Set font size to 18pt */
+    font-weight: normal; /* Set font weight to regular */
+    color: #343541; /* Set font color to #343541 */
 }
