--- a/hacklytics/src/pages/CategoryList.css
+++ b/hacklytics/src/pages/CategoryList.css
@@ -19,23 +19,25 @@
 }
 
 .button {
+    width: 90px;
+    height: 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin-left: 90px;
-    margin-right: 90px;
+    margin-left: 60px;
+    margin-right: 60px;
     padding: 20px;
     background-color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     font-family: Inter;
 }
   
 .button:hover {
     background-color: #f0f0f0; /* Change background color on hover */
-    border-radius: 5px
+    border-radius: 20px
 }
 
 .image {
