--- a/hacklytics/src/pages/CategoryList.css
+++ b/hacklytics/src/pages/CategoryList.css
@@ -18,6 +18,13 @@
     font-weight: 700;
 }
 
+.miniHeader {
+    margin-top: -95px;
+    margin-bottom: 85px;
+    font: Inter;
+    font-weight: 500;
+}
+
 .button {
     width: 90px;
     height: 120px;
