--- a/hacklytics/src/pages/CategoryList.css
+++ b/hacklytics/src/pages/CategoryList.css
@@ -14,14 +14,14 @@
 
 .header{
     margin-top:90px;
-    font: Inter;
+    font-family: Inter;
     font-weight: 700;
 }
 
 .miniHeader {
-    margin-top: -95px;
+    margin-top: -80px;
     margin-bottom: 85px;
-    font: Inter;
+    font-family: Inter;
     font-weight: 500;
 }
 
