--- a/hacklytics/src/components/Card.css
+++ b/hacklytics/src/components/Card.css
@@ -2,6 +2,7 @@
 
 .card {
     margin-top: 50px;
+    margin-bottom: -20px;
 }
 .card-content{
     text-align: center;
@@ -12,8 +13,9 @@
 }
 
 .cardImage {
-    width: 202px;
+    width: 180px;
     height: auto; 
+    margin-top: -20px;
     /* height: 300px;  */
 }
 
@@ -22,6 +24,7 @@
     flex-direction: row;
     justify-content: center; 
     align-items: center;
+    margin-bottom: 100px;
 }
 
 .card-buttons button {
